Change lorem to English

--- a/index.html
+++ b/index.html
@@ -55,26 +55,17 @@
                     <section>
                         <img src="images/subscribe.jpg" alt="subscribe" />
                         <h3>Subscribe</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, asperiores porro similique corrupti ab maxime! Quod quaerat esse
-                            illum asperiores.
-                        </p>
+                        <p>Choose from either standard or premium rotating, monthly varieties.</p>
                     </section>
                     <section>
                         <img src="images/curated.jpg" alt="curated" />
                         <h3>Curated</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, asperiores porro similique corrupti ab maxime! Quod quaerat esse
-                            illum asperiores.
-                        </p>
+                        <p>Our team curates an awesome selection of snacks, tea, rewards, and more.</p>
                     </section>
                     <section>
                         <img src="images/get-a-box.jpg" alt="get a box" />
                         <h3>Get a Box</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, asperiores porro similique corrupti ab maxime! Quod quaerat esse
-                            illum asperiores.
-                        </p>
+                        <p>Taste, explore, and enjoy your box imported exclusively by Japan Box.</p>
                     </section>
                 </article>
                 <article>
@@ -175,20 +166,14 @@
                         <img src="images/discover-japan.jpg" alt="discover Japan through snacks"></img>
                         <div>
                             <h3>Discover Japan through Snacks</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, repudiandae eum? Placeat incidunt et esse quam repellendus ipsa
-                                nesciunt, ullam, dignissimos nemo reiciendis, eaque tempora quisquam sit molestias quaerat iste?
-                            </p>
+                            <p>Japan Box delivers the experience of tasting seasonal and unique Japanese snacks and candies sourced directly from centuries-old family makers.</p>
                         </div>
                     </section>
                     <section>
                         <img src="images/time-for-tea.jpg" alt="time for tea"></img>
                         <div>
                             <h3>Time for Tea</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, repudiandae eum? Placeat incidunt et esse quam repellendus ipsa
-                                nesciunt, ullam, dignissimos nemo reiciendis, eaque tempora quisquam sit molestias quaerat iste?
-                            </p>
+                            <p>The traditional Japanese tea ceremony symbolizes purity, harmony, tranquility, and respect. Japan Box offers an opportunity to enjoy rich and authentic Japanese cultere at home.</p>
                         </div>
                     </section>
                     <p class="btn"><a href="">LERAN MORE</a></p>
