Make use of the proofread text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </header>
         <main>
             <section>
-                <h2>Snacks from Japan <br />to your door monthly</h2>
+                <h2>Snacks from Japan monthly<br />to your door</h2>
                 <p>No matter where you are in the world, you'll find all the quality ingredients and flavors you expect from Japan Box.</p>
                 <p class="btn"><a href="">SUBSCRIBE NOW</a></p>
                 <p><span>Scroll</span></p>
@@ -55,17 +55,17 @@
                     <section>
                         <img src="images/subscribe.jpg" alt="subscribe" />
                         <h3>Subscribe</h3>
-                        <p>Choose from either standard or premium rotating, monthly varieties.</p>
+                        <p>Choose from our standard or premium seasonal selections.</p>
                     </section>
                     <section>
                         <img src="images/curated.jpg" alt="curated" />
                         <h3>Curated</h3>
-                        <p>Our team curates an awesome selection of snacks, tea, rewards, and more.</p>
+                        <p>Our team hand-picks awesome snacks, tea, rewards, and more.</p>
                     </section>
                     <section>
                         <img src="images/get-a-box.jpg" alt="get a box" />
                         <h3>Get a Box</h3>
-                        <p>Taste, explore, and enjoy your box imported exclusively by Japan Box.</p>
+                        <p>Taste, explore, and enjoy your selection imported exclusively by Japan Box.</p>
                     </section>
                 </article>
                 <article>
@@ -173,7 +173,7 @@
                         <img src="images/time-for-tea.jpg" alt="time for tea"></img>
                         <div>
                             <h3>Time for Tea</h3>
-                            <p>The traditional Japanese tea ceremony symbolizes purity, harmony, tranquility, and respect. Japan Box offers an opportunity to enjoy rich and authentic Japanese cultere at home.</p>
+                            <p>The traditional Japanese tea ceremony symbolizes purity, harmony, tranquility, and respect. Japan Box offers an opportunity to enjoy this rich and authentic part of Japanese culture, from the comfort of your home.</p>
                         </div>
                     </section>
                     <p class="btn"><a href="">LERAN MORE</a></p>
@@ -189,7 +189,7 @@
                 </article>
                 <article>
                     <h2>DISCOVER NEW TREATS</h2>
-                    <p>Sign up for exclusive deals and offers including a 10% off your first purchase.</p>
+                    <p>Sign up for exclusive deals and offers including 10% off your first purchase.</p>
                     <form action="" method="get" class="form-example">
                         <input type="email" id="email" pattern=".+@globex\.com" placeholder="example@xxx.com" required />
                         <input type="submit" value="SIGN UP" />
