Fix the code to make the animation fade in

--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
             <section>
                 <article>
                     <h2>HOW IT WORKS</h2>
-                    <section>
+                    <section class="fade-up">
                         <img src="images/subscribe.jpg" alt="subscribe" />
                         <h3>Subscribe</h3>
                         <p>Choose from our standard or premium seasonal selections.</p>
                     </section>
-                    <section>
+                    <section class="fade-up">
                         <img src="images/curated.jpg" alt="curated" />
                         <h3>Curated</h3>
                         <p>Our team hand-picks awesome snacks, tea, rewards, and more.</p>
                     </section>
-                    <section>
+                    <section class="fade-up">
                         <img src="images/get-a-box.jpg" alt="get a box" />
                         <h3>Get a Box</h3>
                         <p>Taste, explore, and enjoy your selection imported exclusively by Japan Box.</p>
@@ -70,7 +70,7 @@
                 </article>
                 <article>
                     <h2>WHAT'S INSIDE THE BOX</h2>
-                    <section>
+                    <section class="fade-left">
                         <h3>Standard</h3>
                         <p><img src="images/standard.jpg" alt="standard" /></p>
                         <ul>
@@ -79,7 +79,7 @@
                             <li>Booklet</li>
                         </ul>
                     </section>
-                    <section>
+                    <section class="fade-right">
                         <h3>Premium</h3>
                         <p><img src="images/premium.jpg" alt="premium" /></p>
                         <ul>
@@ -162,14 +162,14 @@
                 </article>
                 <article>
                     <h2>INSPIRATION</h2>
-                    <section>
+                    <section class="fade-left">
                         <img src="images/discover-japan.jpg" alt="discover Japan through snacks"></img>
                         <div>
                             <h3>Discover Japan through Snacks</h3>
                             <p>Japan Box delivers the experience of tasting seasonal and unique Japanese snacks and candies sourced directly from centuries-old family makers.</p>
                         </div>
                     </section>
-                    <section>
+                    <section class="fade-right">
                         <img src="images/time-for-tea.jpg" alt="time for tea"></img>
                         <div>
                             <h3>Time for Tea</h3>
